# sentinelq

./: .npmrc  .project  README.md  cloudModel.py  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/ai-chat/: route.ts
app/api/clips/: route.ts
app/api/hub/: route.ts
app/api/incident-media/: route.ts
app/api/incidents/: page.tsx  route.ts
app/dashboard/: page.tsx
app/supabase-test/: page.tsx
backend/: h264_postprocess.py  install_cloud_service.sh  placeholder.txt  sentinelq-cloud.service  transcode_clips.py
components/: ai-assistant-view.tsx  analytics-view.tsx  app-sidebar.tsx  camera-feed-card.tsx  cameras-view.tsx  dashboard-view.tsx  hub-status-bar.tsx  incident-panel.tsx  incidents-view.tsx  neighbors-view.tsx  settings-view.tsx  smart-home-preview.tsx  stats-overview.tsx  top-header.tsx
edge/survi/cpp_infer/: CMakeLists.txt  infer_mp4.cpp
edge/survi/python/: api_client.py  config.json  contracts.py  h264_postprocess.py  local_infer.py  main.py  packaging.py  requirements.txt  segment_buffer.py  stop.sh  uploader.py  uploader_worker.py
frontend/: .git.code-workspace
hooks/: use-dashboard-data.ts
lib/: data.ts  mock-data.ts  supabase-data.ts  supabaseAdmin.ts  supabaseClient.ts
model/: cloudModel.py  main.py
